Update github repo

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <section class="social" data-aos="fade-up">
         <a href="https://www.linkedin.com/in/niyomi-rabdu/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:niyomirabdu93@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/niyomi" target="_blank"><i class="fab fa-github"></i></a>
       </section>
 
         <!-- Technical Skills -->
