change profile pic and updated summary

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <h2>About Me</h2>
         <div class="separator"></div>
         <p> Niyomi Rabdu</p>
-        <p> QA Automation Engineer</p>
+        <p> SDET | QA Automation Engineer</p>
         <p><i class="fas fa-briefcase"></i> 5+ Years Experience</p>
         <p><i class="fas fa-phone"></i>  8460884984</p>
       </section>
@@ -223,7 +223,7 @@
           <h2>Profile Summary</h2>
           <p>
             Automation Engineer with 5+ years of experience designing and developing scalable test automation frameworks. 
-            Skilled in modern tools like <strong>Cypress</strong>, <strong>Playwright</strong>, <strong>Selenium (Java)</strong>, 
+            Skilled in modern tools like <strong>Python</strong>, <strong>Cypress</strong>, <strong>Playwright</strong>, <strong>Selenium (Java)</strong>, 
             with expertise in CI/CD pipelines and Agile environments.
           </p>
         </div>
@@ -242,8 +242,8 @@
               <p class="t-desc">
                 <p> 
                     Experienced SDET skilled in building robust test automation
-                    frameworks using Playwright and Cypress with TypeScript. Proficient
-                    in CI/CD tools like Azure DevOps and Jenkins, with hands-on
+                    frameworks using Playwright and Cypress with TypeScript, Python with custom test framework. Proficient
+                    in CI/CD tools like Azure DevOps, Jenkins, TeamCity with hands-on
                     experience analyzing auto-triggered pipeline results and validating
                     release builds.
                 </p> 
