--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         /* Profile photo */
     .profile-pic{
         width:150px; height:150px; border-radius:50%;
-        background:#c9c9c9 url('niyomi-resume.png') center/cover no-repeat;
+        background:#c9c9c9 url('niyomi-resume.jpg') center/cover no-repeat;
         border:4px solid #fff; box-shadow: var(--shadow);
         margin-bottom:16px;
         }
