--- a/index.html
+++ b/index.html
@@ -959,10 +959,10 @@
       <i class="fas fa-download"></i>
       Download Image
     </button>
-    <button class="download-btn" id="printResume" style="background: linear-gradient(135deg, #28a745 0%, #20693e 100%);">
+    <!-- <button class="download-btn" id="printResume" style="background: linear-gradient(135deg, #28a745 0%, #20693e 100%);">
       <i class="fas fa-print"></i>
       Print PDF
-    </button>
+    </button> -->
   </div>
 
   <main class="wrap" id="resume">
